// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox Styles should render with checked styles 1`] = `
.circuit-0 {
  position: relative;
}

.circuit-0.cui-field-disabled {
  pointer-events: none;
}

.circuit-1 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-1+label::before {
  height: 18px;
  width: 18px;
  box-sizing: border-box;
  box-shadow: 0;
  background-color: var(--cui-bg-normal);
  border: 1px solid var(--cui-border-normal);
  border-radius: 3px;
  content: '';
  display: block;
  position: absolute;
  top: 12px;
  left: 0;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition: border 120ms ease-in-out,background-color 120ms ease-in-out;
  transition: border 120ms ease-in-out,background-color 120ms ease-in-out;
}

.circuit-1+label svg {
  height: 18px;
  width: 18px;
  padding: 2px;
  box-sizing: border-box;
  color: var(--cui-fg-on-strong);
  display: block;
  line-height: 0;
  opacity: 0;
  position: absolute;
  top: 12px;
  left: 0;
  -webkit-transform: translateY(-50%) scale(0, 0);
  -moz-transform: translateY(-50%) scale(0, 0);
  -ms-transform: translateY(-50%) scale(0, 0);
  transform: translateY(-50%) scale(0, 0);
  -webkit-transition: -webkit-transform 120ms ease-in-out,opacity 120ms ease-in-out;
  transition: transform 120ms ease-in-out,opacity 120ms ease-in-out;
}

.circuit-1:hover+label::before {
  border-color: var(--cui-border-accent-hovered);
}

.circuit-1:focus+label::before {
  outline: 0;
  box-shadow: 0 0 0 4px var(--cui-border-focus);
  border-color: var(--cui-border-accent);
}

.circuit-1:focus+label::before::-moz-focus-inner {
  border: 0;
}

.circuit-1:focus:not(:focus-visible)+label::before {
  box-shadow: none;
  border-color: var(--cui-border-normal);
}

.circuit-1:checked:focus:not(:focus-visible)+label::before {
  border-color: var(--cui-border-accent);
}

.circuit-1:checked+label>svg {
  -webkit-transform: translateY(-50%) scale(1, 1);
  -moz-transform: translateY(-50%) scale(1, 1);
  -ms-transform: translateY(-50%) scale(1, 1);
  transform: translateY(-50%) scale(1, 1);
  opacity: 1;
}

.circuit-1:checked+label::before {
  border-color: var(--cui-border-accent);
  background-color: var(--cui-bg-accent-strong);
}

.circuit-1:disabled+label,
.circuit-1[disabled]+label {
  pointer-events: none;
  color: var(--cui-fg-normal-disabled);
}

.circuit-1:disabled+label::before,
.circuit-1[disabled]+label::before {
  border-color: var(--cui-border-normal-disabled);
  background-color: var(--cui-bg-normal-disabled);
}

.circuit-1:disabled:checked+label::before,
.circuit-1[disabled]:checked+label::before {
  border-color: var(--cui-border-accent-disabled);
  background-color: var(--cui-bg-accent-strong-disabled);
}

.circuit-2 {
  color: var(--cui-fg-normal);
  display: inline-block;
  padding-left: 26px;
  position: relative;
  cursor: pointer;
}

<div>
  <div
    class="circuit-0"
  >
    <input
      aria-describedby="validation_hint-4"
      checked=""
      class="circuit-1"
      id="checkbox_3"
      type="checkbox"
      value=""
    />
    <label
      class="circuit-2"
      for="checkbox_3"
    >
      Label
      <svg
        aria-hidden="true"
        fill="none"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5.992 14.5a.992.992 0 0 1-.707-.293l-5-5A1 1 0 0 1 1.7 7.794L5.909 12l8.308-10.125a1.001 1.001 0 1 1 1.563 1.251l-9.006 11a1 1 0 0 1-.726.375l-.056-.001z"
          fill="currentColor"
        />
      </svg>
    </label>
    <span
      aria-live="polite"
      role="status"
    />
  </div>
</div>
`;

exports[`Checkbox Styles should render with default styles 1`] = `
.circuit-0 {
  position: relative;
}

.circuit-0.cui-field-disabled {
  pointer-events: none;
}

.circuit-1 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-1+label::before {
  height: 18px;
  width: 18px;
  box-sizing: border-box;
  box-shadow: 0;
  background-color: var(--cui-bg-normal);
  border: 1px solid var(--cui-border-normal);
  border-radius: 3px;
  content: '';
  display: block;
  position: absolute;
  top: 12px;
  left: 0;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition: border 120ms ease-in-out,background-color 120ms ease-in-out;
  transition: border 120ms ease-in-out,background-color 120ms ease-in-out;
}

.circuit-1+label svg {
  height: 18px;
  width: 18px;
  padding: 2px;
  box-sizing: border-box;
  color: var(--cui-fg-on-strong);
  display: block;
  line-height: 0;
  opacity: 0;
  position: absolute;
  top: 12px;
  left: 0;
  -webkit-transform: translateY(-50%) scale(0, 0);
  -moz-transform: translateY(-50%) scale(0, 0);
  -ms-transform: translateY(-50%) scale(0, 0);
  transform: translateY(-50%) scale(0, 0);
  -webkit-transition: -webkit-transform 120ms ease-in-out,opacity 120ms ease-in-out;
  transition: transform 120ms ease-in-out,opacity 120ms ease-in-out;
}

.circuit-1:hover+label::before {
  border-color: var(--cui-border-accent-hovered);
}

.circuit-1:focus+label::before {
  outline: 0;
  box-shadow: 0 0 0 4px var(--cui-border-focus);
  border-color: var(--cui-border-accent);
}

.circuit-1:focus+label::before::-moz-focus-inner {
  border: 0;
}

.circuit-1:focus:not(:focus-visible)+label::before {
  box-shadow: none;
  border-color: var(--cui-border-normal);
}

.circuit-1:checked:focus:not(:focus-visible)+label::before {
  border-color: var(--cui-border-accent);
}

.circuit-1:checked+label>svg {
  -webkit-transform: translateY(-50%) scale(1, 1);
  -moz-transform: translateY(-50%) scale(1, 1);
  -ms-transform: translateY(-50%) scale(1, 1);
  transform: translateY(-50%) scale(1, 1);
  opacity: 1;
}

.circuit-1:checked+label::before {
  border-color: var(--cui-border-accent);
  background-color: var(--cui-bg-accent-strong);
}

.circuit-1:disabled+label,
.circuit-1[disabled]+label {
  pointer-events: none;
  color: var(--cui-fg-normal-disabled);
}

.circuit-1:disabled+label::before,
.circuit-1[disabled]+label::before {
  border-color: var(--cui-border-normal-disabled);
  background-color: var(--cui-bg-normal-disabled);
}

.circuit-1:disabled:checked+label::before,
.circuit-1[disabled]:checked+label::before {
  border-color: var(--cui-border-accent-disabled);
  background-color: var(--cui-bg-accent-strong-disabled);
}

.circuit-2 {
  color: var(--cui-fg-normal);
  display: inline-block;
  padding-left: 26px;
  position: relative;
  cursor: pointer;
}

<div>
  <div
    class="circuit-0"
  >
    <input
      aria-describedby="validation_hint-2"
      class="circuit-1"
      id="checkbox_1"
      type="checkbox"
      value=""
    />
    <label
      class="circuit-2"
      for="checkbox_1"
    >
      Label
      <svg
        aria-hidden="true"
        fill="none"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5.992 14.5a.992.992 0 0 1-.707-.293l-5-5A1 1 0 0 1 1.7 7.794L5.909 12l8.308-10.125a1.001 1.001 0 1 1 1.563 1.251l-9.006 11a1 1 0 0 1-.726.375l-.056-.001z"
          fill="currentColor"
        />
      </svg>
    </label>
    <span
      aria-live="polite"
      role="status"
    />
  </div>
</div>
`;

exports[`Checkbox Styles should render with disabled styles 1`] = `
.circuit-0 {
  position: relative;
}

.circuit-0.cui-field-disabled {
  pointer-events: none;
}

.circuit-1 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-1+label::before {
  height: 18px;
  width: 18px;
  box-sizing: border-box;
  box-shadow: 0;
  background-color: var(--cui-bg-normal);
  border: 1px solid var(--cui-border-normal);
  border-radius: 3px;
  content: '';
  display: block;
  position: absolute;
  top: 12px;
  left: 0;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition: border 120ms ease-in-out,background-color 120ms ease-in-out;
  transition: border 120ms ease-in-out,background-color 120ms ease-in-out;
}

.circuit-1+label svg {
  height: 18px;
  width: 18px;
  padding: 2px;
  box-sizing: border-box;
  color: var(--cui-fg-on-strong);
  display: block;
  line-height: 0;
  opacity: 0;
  position: absolute;
  top: 12px;
  left: 0;
  -webkit-transform: translateY(-50%) scale(0, 0);
  -moz-transform: translateY(-50%) scale(0, 0);
  -ms-transform: translateY(-50%) scale(0, 0);
  transform: translateY(-50%) scale(0, 0);
  -webkit-transition: -webkit-transform 120ms ease-in-out,opacity 120ms ease-in-out;
  transition: transform 120ms ease-in-out,opacity 120ms ease-in-out;
}

.circuit-1:hover+label::before {
  border-color: var(--cui-border-accent-hovered);
}

.circuit-1:focus+label::before {
  outline: 0;
  box-shadow: 0 0 0 4px var(--cui-border-focus);
  border-color: var(--cui-border-accent);
}

.circuit-1:focus+label::before::-moz-focus-inner {
  border: 0;
}

.circuit-1:focus:not(:focus-visible)+label::before {
  box-shadow: none;
  border-color: var(--cui-border-normal);
}

.circuit-1:checked:focus:not(:focus-visible)+label::before {
  border-color: var(--cui-border-accent);
}

.circuit-1:checked+label>svg {
  -webkit-transform: translateY(-50%) scale(1, 1);
  -moz-transform: translateY(-50%) scale(1, 1);
  -ms-transform: translateY(-50%) scale(1, 1);
  transform: translateY(-50%) scale(1, 1);
  opacity: 1;
}

.circuit-1:checked+label::before {
  border-color: var(--cui-border-accent);
  background-color: var(--cui-bg-accent-strong);
}

.circuit-1:disabled+label,
.circuit-1[disabled]+label {
  pointer-events: none;
  color: var(--cui-fg-normal-disabled);
}

.circuit-1:disabled+label::before,
.circuit-1[disabled]+label::before {
  border-color: var(--cui-border-normal-disabled);
  background-color: var(--cui-bg-normal-disabled);
}

.circuit-1:disabled:checked+label::before,
.circuit-1[disabled]:checked+label::before {
  border-color: var(--cui-border-accent-disabled);
  background-color: var(--cui-bg-accent-strong-disabled);
}

.circuit-2 {
  color: var(--cui-fg-normal);
  display: inline-block;
  padding-left: 26px;
  position: relative;
  cursor: pointer;
}

<div>
  <div
    class="cui-field-disabled circuit-0"
  >
    <input
      aria-describedby="validation_hint-6"
      class="circuit-1"
      disabled=""
      id="checkbox_5"
      type="checkbox"
      value=""
    />
    <label
      class="circuit-2"
      for="checkbox_5"
    >
      Label
      <svg
        aria-hidden="true"
        fill="none"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5.992 14.5a.992.992 0 0 1-.707-.293l-5-5A1 1 0 0 1 1.7 7.794L5.909 12l8.308-10.125a1.001 1.001 0 1 1 1.563 1.251l-9.006 11a1 1 0 0 1-.726.375l-.056-.001z"
          fill="currentColor"
        />
      </svg>
    </label>
    <span
      aria-live="polite"
      role="status"
    />
  </div>
</div>
`;

exports[`Checkbox Styles should render with invalid styles and an error message 1`] = `
.circuit-0 {
  position: relative;
}

.circuit-0.cui-field-disabled {
  pointer-events: none;
}

.circuit-1 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-1+label::before {
  height: 18px;
  width: 18px;
  box-sizing: border-box;
  box-shadow: 0;
  background-color: var(--cui-bg-normal);
  border: 1px solid var(--cui-border-normal);
  border-radius: 3px;
  content: '';
  display: block;
  position: absolute;
  top: 12px;
  left: 0;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition: border 120ms ease-in-out,background-color 120ms ease-in-out;
  transition: border 120ms ease-in-out,background-color 120ms ease-in-out;
}

.circuit-1+label svg {
  height: 18px;
  width: 18px;
  padding: 2px;
  box-sizing: border-box;
  color: var(--cui-fg-on-strong);
  display: block;
  line-height: 0;
  opacity: 0;
  position: absolute;
  top: 12px;
  left: 0;
  -webkit-transform: translateY(-50%) scale(0, 0);
  -moz-transform: translateY(-50%) scale(0, 0);
  -ms-transform: translateY(-50%) scale(0, 0);
  transform: translateY(-50%) scale(0, 0);
  -webkit-transition: -webkit-transform 120ms ease-in-out,opacity 120ms ease-in-out;
  transition: transform 120ms ease-in-out,opacity 120ms ease-in-out;
}

.circuit-1:hover+label::before {
  border-color: var(--cui-border-accent-hovered);
}

.circuit-1:focus+label::before {
  outline: 0;
  box-shadow: 0 0 0 4px var(--cui-border-focus);
  border-color: var(--cui-border-accent);
}

.circuit-1:focus+label::before::-moz-focus-inner {
  border: 0;
}

.circuit-1:focus:not(:focus-visible)+label::before {
  box-shadow: none;
  border-color: var(--cui-border-normal);
}

.circuit-1:checked:focus:not(:focus-visible)+label::before {
  border-color: var(--cui-border-accent);
}

.circuit-1:checked+label>svg {
  -webkit-transform: translateY(-50%) scale(1, 1);
  -moz-transform: translateY(-50%) scale(1, 1);
  -ms-transform: translateY(-50%) scale(1, 1);
  transform: translateY(-50%) scale(1, 1);
  opacity: 1;
}

.circuit-1:checked+label::before {
  border-color: var(--cui-border-accent);
  background-color: var(--cui-bg-accent-strong);
}

.circuit-1+label::before {
  border-color: var(--cui-border-danger);
  background-color: var(--cui-bg-danger);
}

.circuit-1:hover+label::before,
.circuit-1:focus+label::before {
  border-color: var(--cui-border-danger-hovered);
}

.circuit-1:checked+label::before {
  border-color: var(--cui-border-danger);
  background-color: var(--cui-bg-danger-strong);
}

.circuit-1:disabled+label,
.circuit-1[disabled]+label {
  pointer-events: none;
  color: var(--cui-fg-normal-disabled);
}

.circuit-1:disabled+label::before,
.circuit-1[disabled]+label::before {
  border-color: var(--cui-border-normal-disabled);
  background-color: var(--cui-bg-normal-disabled);
}

.circuit-1:disabled:checked+label::before,
.circuit-1[disabled]:checked+label::before {
  border-color: var(--cui-border-accent-disabled);
  background-color: var(--cui-bg-accent-strong-disabled);
}

.circuit-2 {
  color: var(--cui-fg-normal);
  display: inline-block;
  padding-left: 26px;
  position: relative;
  cursor: pointer;
}

.circuit-3 {
  font-size: 0.875rem;
  line-height: 1.25rem;
  display: block;
  margin-top: 4px;
  color: var(--cui-fg-subtle);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
  color: var(--cui-fg-danger);
}

.cui-field-disabled .circuit-3 {
  color: var(--cui-fg-subtle-disabled);
}

.cui-field-disabled .circuit-3 {
  color: var(--cui-fg-danger-disabled);
}

.circuit-4 {
  display: inline-block;
  position: relative;
  width: 16px;
  height: 16px;
  vertical-align: text-top;
  margin-right: 4px;
}

<div>
  <div
    class="circuit-0"
  >
    <input
      aria-describedby="validation_hint-8"
      class="circuit-1"
      id="checkbox_7"
      type="checkbox"
      value=""
    />
    <label
      class="circuit-2"
      for="checkbox_7"
    >
      Label
      <svg
        aria-hidden="true"
        fill="none"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5.992 14.5a.992.992 0 0 1-.707-.293l-5-5A1 1 0 0 1 1.7 7.794L5.909 12l8.308-10.125a1.001 1.001 0 1 1 1.563 1.251l-9.006 11a1 1 0 0 1-.726.375l-.056-.001z"
          fill="currentColor"
        />
      </svg>
    </label>
    <span
      aria-live="polite"
      role="status"
    >
      <span
        class="circuit-3"
        id="validation_hint-8"
      >
        <div
          class="circuit-4"
        >
          <svg
            fill="none"
            height="16"
            role="presentation"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8 0a8 8 0 1 0 0 16A8 8 0 0 0 8 0zm3 11a1 1 0 0 1-1.41 0L8 9.41 6.41 11A1 1 0 0 1 5 9.59L6.59 8 5 6.41A1 1 0 0 1 5 5a1 1 0 0 1 1.41 0L8 6.59 9.59 5A1 1 0 0 1 11 5a1 1 0 0 1 0 1.41L9.41 8 11 9.59A1 1 0 0 1 11 11z"
              fill="currentColor"
            />
          </svg>
        </div>
        This field is required.
      </span>
    </span>
  </div>
</div>
`;
